@@ -1,3 +1,9 @@
+2009-06-16  Maciej W. Rozycki  <macro@linux-mips.org>
+
+	* elf32-vax.c (elf_vax_check_relocs): Handle the visibility
+	attribute.
+	(elf_vax_relocate_section): Likewise.
+
 2009-06-15  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elf32-i386.c (elf_i386_allocate_dynrelocs): Update comments.
